autotests/syntax-tests/tests/negative/negative119.sref
Name { Name Name , Name Name : Name ( $EXTERN Name Name ) Name
, : = : = ; = ; } ; 